<resources>
    <string name="app_name">Libros App Kotlin</string>


    <string name="Menu_Panel">Panel</string>
    <string name="Menu_Cuenta">Cuenta</string>

    <string name="Titutlo_RL_Admin">Titulo</string>

    <string name="Txt_rol">Por favor elija un rol</string>
    <string name="Btn_rol_administrador">Administrador</string>
    <string name="Btn_rol_cliente">Estudiantes</string>


    <string name="TxtregistroAdmin">Registro de Administrador</string>
    <string name="Et_nombres_admin">Nombres</string>
    <string name="Et_email_admin">Email</string>
    <string name="Et_password_admin">Contraseña</string>
    <string name="Et_R_password_admin">Repita la contraseña</string>
    <string name="Btn_registrar_admin">Registrarme</string>
    <string name="CerrarSesionAdmin">Cerrar sesión</string>
    <string name="TxtLoginAdmin">Login administradores</string>
    <string name="Btn_login_admin">Ingresar</string>
    <string name="Txt_tengo_cuenta">Tengo una cuenta. </string>

    <string name="Btn_agregar_categoria">Agregar Categoria</string>
    <string name="Txt_agregar_categoria">Agregar Categoria</string>
    <string name="Et_categoria">Ingrese Categoria</string>
    <string name="Agregar_categoria_BD">Agregar</string>

    <string name="Item_nombre_cat_a">Nombre Categoria</string>
    <string name="Buscar_categoria">Buscar Categoria</string>

    <string name="Txt_Agregar_libro">Agregar Libro</string>

    <string name="Et_titulo_libro">Titulo libro</string>
    <string name="Et_descripcion_libro">Descripcion libro</string>
    <string name="Tv_categoria_libro">Categoria</string>

    <string name="Btn_subir_libro">Subir</string>

    <string name="Txt_titulo_libro">Libros</string>
    <string name="Txt_categoria_libro">Categoria</string>
    <string name="Et_buscar_libro_admin">Buscar Libro</string>

    <string name="Txt_titulo_libro_item">Titulo libro</string>
    <string name="Txt_descripcion_libro_item">Descripcion Libro</string>
    <string name="Txt_categoria_libro_admin">Categoria</string>
    <string name="Txt_tamanio_libro_admin">5MB</string>
    <string name="Txt_fecha_libro_admin">dd/MM/yyyy</string>


    <string name="Txt_actualizar_libro">Actualizar Libro</string>
    <string name="Btn_actualizar_libro">Actualizar</string>

    <string name="Txt_detalle_libro">Detalle libro</string>


    <string name="titulo_libro_D">Titulo Libro</string>
    <string name="Txt_categoria_D">Categoria: </string>
    <string name="categoria_D"> -- </string>
    <string name="Txt_fecha_D">Fecha: </string>
    <string name="fecha_D"> -- </string>
    <string name="Txt_tamanio_D">Tamaño: </string>
    <string name="tamanio_D"> -- </string>
    <string name="Txt_vistas_D">Vistas: </string>
    <string name="vistas_D"> -- </string>
    <string name="Txt_descargas_D">Descargas: </string>
    <string name="descargas_D"> -- </string>
    <string name="Txt_paginas_D">Páginas: </string>
    <string name="paginas_D"> -- </string>

    <string name="Txt_descripcion_D">Descripcion: </string>
    <string name="descripcion_D"> -- </string>

    <string name="Btn_leer_libro">Leer </string>

    <string name="Txt_leer_libro">Lectura de libro</string>

    <!--Perfil del Admin-->

    <string name="nombres_admin">Nombres: </string>
    <string name="Txt_nombres_admin"> -- </string>
    <string name="email_admin">Email: </string>
    <string name="Txt_email_admin"> -- </string>
    <string name="tiempo_registro_admin">Miembro Desde: </string>
    <string name="txt_tiempo_registro_admin"> -- </string>
    <string name="rol_admin">Rol: </string>
    <string name="Txt_rol_admin"> -- </string>
    <string name="Txt_mas_opciones">Mas Opciones: </string>

    <string name="EditarPerfilAdmin">Editar Perfil</string>
    <string name="Txt_editar_perfil_admin">Editar perfil</string>
    <string name="Et_a_nombres">Nombres</string>
    <string name="Btn_actualizar_info">Actualizar</string>

    <string name="TxtRegistrarCliente">Registro Estudiante</string>

    <string name="Et_nombres_cl">Nombres</string>
    <string name="Et_edad_cl">Edad</string>
    <string name="Et_email_cl">Email</string>
    <string name="Et_password_cl">Password</string>
    <string name="Et_r_password_cl">Repetir password</string>
    <string name="Btn_registrar_cliente">Registrar</string>


    <!--Menu Bottom cliente-->
    <string name="Menu_dashboard_cl">Dashboard</string>
    <string name="Menu_favoritos_cl">Favoritos</string>
    <string name="Menu_cuenta_cl">Cuenta</string>

    <string name="Titulo_Rl_Cliente">Titulo</string>

    <string name="CerrarSessionCliente">Cerrar Session</string>

    <!--Login cliente-->

    <string name="TxtLoginCliente">Login cliente</string>
    <string name="Btn_login_cliente">Ingresar</string>

    <!--Login google-->
    <string name="Txt_alternativa">Alternativa</string>
    <string name="Btn_Login_google">Ingresar con Google</string>

    <string name="default_web_client_id">615827656651-imi5h93tcm54he77njqpm50h7t4upa4o.apps.googleusercontent.com</string>

    <string name="Item_nombre_cat_c">Nombre Categoria</string>

    <string name="Et_buscar_libro_cliente">Buscar</string>
    
    <string name="Btn_leer_libro_C">Leer</string>
    <string name="Btn_Descargar_libro_C">Descargar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>