<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cliente.ListarPdfCliente">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRLListarPdf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:id="@+id/Ib_regresar"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_regresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Titulo del Libro-->
        <TextView
            android:id="@+id/Txt_titulo_libro"
            android:text="@string/Txt_titulo_libro"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Categoria del libro-->
        <TextView
            android:id="@+id/Txt_categoria_libro"
            android:text="@string/Txt_categoria_libro"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_alignParentBottom="true"
            android:background="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    </RelativeLayout>
    
    <EditText
        android:id="@+id/Et_buscar_libro_cliente"
        android:hint="@string/Et_buscar_libro_cliente"
        android:drawableStart="@drawable/ic_buscar"
        android:layout_below="@+id/toolbarRLListarPdf"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Rv_libros_cliente"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Et_buscar_libro_cliente"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_libro_cliente">


    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>